@@ -1,5 +1,9 @@
 2005-10-03  Brian Cameron <Brian.Cameron@sun.com>
 
+	* daemon/slave.c: Remove evil gdm_debug output.
+
+2005-10-03  Brian Cameron <Brian.Cameron@sun.com>
+
 	* gui/gdmsetup.glade: Fix label to remove unwanted
 	  "\n" characters.  Fixes bug #317820.
 
